--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "array.findIndex",
-  "version": "v1.0.2",
+  "name": "array.findindex",
+  "version": "v1.0.3",
   "description": "Lightweight Array.prototype.findIndex Polyfill. ES5. IE9+",
   "main": "src/array-find-index-polyfill.js",
   "scripts": {
@@ -11,10 +11,7 @@
     "coveralls": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls",
     "cover": "istanbul cover _mocha"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/vovkabelov/array.findIndex.git"
-  },
+  "repository": "https://github.com/vovkabelov/array.findIndex.git",
   "keywords": [
     "array",
     "findIndex",
@@ -36,5 +33,6 @@
     "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
     "uglify-js": "^3.1.9"
-  }
+  },
+  "private": false
 }
