--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,6 +19,9 @@ jobs:
           node-version: '22.x'
           registry-url: 'https://registry.npmjs.org'
 
+      - name: 'Update npm...'
+        run: npm install -g npm@latest
+
       - name: 'Install dependencies (npm install) 📦...'
         run: npm install
 
